atualização do site

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <section class="menu">  
         <div id="menu">
             <ul>
+                <li><a href="sobre.html" style="text-decoration: none">Sobre</a></li>
                 <li><a href="cotacao.html" style="text-decoration: none">Cotação</a></li>
                 <li><a href="#contato" style="text-decoration: none">Contato </a></li>
             </ul>
